# SpaceDrive

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  flag.txt
libmineziper/: CMakeLists.txt
libmineziper/include/: libmineziper.h  libmineziper_bitstream.h  libmineziper_crypto.h  libmineziper_huffman_tree.h  libmineziper_zip.h
libmineziper/src/: libmineziper.c  libmineziper_bitstream.c  libmineziper_crypto.c  libmineziper_huffman_tree.c  libmineziper_zip.c
mineziper/: CMakeLists.txt  mineziper.c  mineziperd.c
mineziper/src/: mineziper.c
solve/: README.md  leak.py  redirect.py  solve.py
src/mineziper/libmineziper/: CMakeLists.txt
src/mineziper/libmineziper/include/: libmineziper_crypto.h
src/mineziper/libmineziper/src/: libmineziper_bitstream.c
src/mineziper/mineziper/: mineziperd.c
src/webapp/: app.py
src/webapp/static/: styles.css
src/webapp/templates/: index.html  upload_status.html
tests/: CMakeLists.txt  test_decode_fixed_tree.c  test_decode_huffman_tree.c  test_get_cdh.c
webapp/: app.py
webapp/templates/: index.html
